feat: Finalizado adoção do pet

--- a/frontend/src/components/pages/Pet/Dashboard.module.css
+++ b/frontend/src/components/pages/Pet/Dashboard.module.css
@@ -88,3 +88,12 @@
     color: transparent;
     background-color: var(--green);
 }
+
+/* my adoptions */
+.contacts {
+    margin-left: 2em;
+}
+
+.contacts p{
+    margin-bottom: .5em;
+}
